--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
         margin: 500px auto;
         width: 1918px;
         height: 878px;
-        background-image: url(../柱灭之刃.png);
+        background-image: url(/hongyu111/hongyu111.github.io/edit/柱灭之刃.png);
         overflow: hidden;
+        background-color: pink;
       }
       .bg .left,
       .bg .right {
         width: 50%;
         height: 878px;
-        background-image: url(../上弦.jpg);
+        background-image: url(/hongyu111/hongyu111.github.io/edit/上弦.jpg);
         transition: all 1;
+        background-color: green;
       }
       .bg .right {
         background-position: right 0;
