--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>咱们结婚吧</title>
-    <link rel="stylesheet" href="./咱们结婚吧.css" />
+    <link rel="stylesheet" href="CSS/index.css" />
   </head>
   <body>
     <div
@@ -26,6 +26,6 @@
     <canvas id="heart"></canvas>
 
     <h1 id="text"></h1>
-    <script src="./咱们结婚吧.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
