--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         preload="auto"
         autoplay=""
         id="media"
-        src="./咱们结婚吧.mp3"
+        src="images/music.mp3"
         autoplay
         preload
         loop="loop"
